--- a/index.html
+++ b/index.html
@@ -1,5 +1,23 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <!-- Hotjar Tracking Code for https://robin-leach.github.io/ -->
+    <script>
+      (function (h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function () {
+            (h.hj.q = h.hj.q || []).push(arguments);
+          };
+        h._hjSettings = { hjid: 2834198, hjsv: 6 };
+        a = o.getElementsByTagName("head")[0];
+        r = o.createElement("script");
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+    </script>
+  </head>
   <body>
     <h1>Example heading</h1>
     <p>Example paragraph</p>
