--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
         a.appendChild(r);
       })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
     </script>
+    <script
+      type="text/javascript"
+      charset="UTF-8"
+      src="//cdn.cookie-script.com/s/d9aae17bd6966284aff81be19b156399.js"
+    ></script>
   </head>
   <body>
     <h1>Example heading</h1>
