--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
       charset="UTF-8"
       src="//cdn.cookie-script.com/s/d9aae17bd6966284aff81be19b156399.js"
     ></script>
+    <!-- Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-P5WWB2P");
+    </script>
+    <!-- End Google Tag Manager -->
     <!-- Hotjar Tracking Code for https://robin-leach.github.io/ -->
     <script>
       (function (h, o, t, j, a, r) {
@@ -24,6 +38,16 @@
     </script>
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-P5WWB2P"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <h1>Example heading</h1>
     <p>Example paragraph</p>
     <button>Example button</button>
