add explicit type

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         }
       }
     </script>
-    <script>
-      document.getElementById("myButton").onclick = refreshScriptTypes();
+    <script type="text/javascript">
+      document.getElementById("myButton").onclick = refreshScriptTypes;
     </script>
     <!-- Google Tag Manager -->
     <script id="ga-script" type="text/plain">
