--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           hjScript.type = "text/plain";
         }
       }
-      document.getElementById("myButton").onclick = refreshScriptTypes;
+      document.getElementById("myButton").addEventListener("click", refreshScriptTypes);
     </script>
   </body>
 </html>
