--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
     <script type="text/javascript">
       function refreshScriptTypes() {
         var cookie = document.cookie.CookieScriptConsent;
+        console.log("cookie is ", cookie);
         if (
+          cookie &&
           cookie.action === "accept" &&
           cookie.categories.includes("functionality")
         ) {
@@ -64,7 +66,7 @@
           gaScript.type = "text/javascript";
           var hjScript = document.getElementById("hj-script");
           hjScript.type = "text/javascript";
-        } else if (cookie.action === "reject") {
+        } else if (cookie && cookie.action === "reject") {
           console.log("rejected");
           var gaScript = document.getElementById("ga-script");
           gaScript.type = "text/plain";
@@ -72,7 +74,7 @@
           hjScript.type = "text/plain";
         }
       }
-      document.getElementById("myButton").addEventListener("click", refreshScriptTypes);
+      document.getElementById("myButton").onclick = refreshScriptTypes;
     </script>
   </body>
 </html>
