--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       src="//cdn.cookie-script.com/s/d9aae17bd6966284aff81be19b156399.js"
     ></script>
     <!-- Google Tag Manager -->
-    <script id="ga-script" type="text/plain">
+    <script id="ga-script" type="text/javascript">
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
         w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
@@ -21,7 +21,7 @@
     </script>
     <!-- End Google Tag Manager -->
     <!-- Hotjar Tracking Code for https://robin-leach.github.io/ -->
-    <script id="hj-script" type="text/plain">
+    <script id="hj-script" type="text/javascript">
       (function (h, o, t, j, a, r) {
         h.hj =
           h.hj ||
@@ -51,37 +51,5 @@
     <h1>Example heading</h1>
     <p>Example paragraph</p>
     <button id="myButton">Example button</button>
-
-    <script type="text/javascript">
-      function refreshScriptTypes() {
-        var cookies = document.cookie.split("; ").map(function (c) {
-          return c.split("=");
-        });
-        var csCookie = cookies.find(function (c) {
-          return (c[0] = "CookieScriptConsent");
-        });
-        if (csCookie) {
-          var value = JSON.parse(csCookie[1]);
-          console.log("cookie is ", value);
-          if (
-            value.action === "accept" &&
-            value.categories.includes("functionality")
-          ) {
-            console.log("accepted functionality");
-            var gaScript = document.getElementById("ga-script");
-            gaScript.type = "text/javascript";
-            var hjScript = document.getElementById("hj-script");
-            hjScript.type = "text/javascript";
-          } else if (value.action === "reject") {
-            console.log("rejected");
-            var gaScript = document.getElementById("ga-script");
-            gaScript.type = "text/plain";
-            var hjScript = document.getElementById("hj-script");
-            hjScript.type = "text/plain";
-          }
-        }
-      }
-      document.getElementById("myButton").onclick = refreshScriptTypes;
-    </script>
   </body>
 </html>
