--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
       charset="UTF-8"
       src="//cdn.cookie-script.com/s/d9aae17bd6966284aff81be19b156399.js"
     ></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-0ZMTVCR89B"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-0ZMTVCR89B");
+    </script>
     <!-- Google Tag Manager -->
     <script id="ga-script" type="text/javascript">
       (function (w, d, s, l, i) {
