--- a/index.html
+++ b/index.html
@@ -65,5 +65,6 @@
     <h1>Example heading</h1>
     <p>Example paragraph</p>
     <button id="myButton">Example button</button>
+    <textarea></textarea>
   </body>
 </html>
