--- a/index.html
+++ b/index.html
@@ -1,70 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <script
-      type="text/javascript"
-      charset="UTF-8"
-      src="//cdn.cookie-script.com/s/d9aae17bd6966284aff81be19b156399.js"
-    ></script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-0ZMTVCR89B"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "G-0ZMTVCR89B");
-    </script>
-    <!-- Google Tag Manager -->
-    <script id="ga-script" type="text/javascript">
-      (function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != "dataLayer" ? "&l=" + l : "";
-        j.async = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-P5WWB2P");
-    </script>
-    <!-- End Google Tag Manager -->
-    <!-- Hotjar Tracking Code for https://robin-leach.github.io/ -->
-    <script id="hj-script" type="text/javascript">
-      (function (h, o, t, j, a, r) {
-        h.hj =
-          h.hj ||
-          function () {
-            (h.hj.q = h.hj.q || []).push(arguments);
-          };
-        h._hjSettings = { hjid: 2834198, hjsv: 6 };
-        a = o.getElementsByTagName("head")[0];
-        r = o.createElement("script");
-        r.async = 1;
-        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-        a.appendChild(r);
-      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
-    </script>
-  </head>
-  <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript
-      ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-P5WWB2P"
-        height="0"
-        width="0"
-        style="display: none; visibility: hidden"
-      ></iframe
-    ></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-    <h1>Example heading</h1>
-    <p>Example paragraph</p>
-    <button id="myButton">Example button</button>
-    <textarea></textarea>
-  </body>
-</html>
+<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/crossword-info/favicon.ico"><title>crossword-info</title><script defer="defer" src="/crossword-info/js/chunk-vendors.fa356b8b.js"></script><script defer="defer" src="/crossword-info/js/app.36e041ba.js"></script><link href="/crossword-info/css/app.2cf79ad6.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but crossword-info doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
